# bazelcon-2019

./: README.md  bitbucket-pipelines.yml
.buildkite/: pipeline.yml
.circleci/: config.yml
1-up-and-running/: .bazelrc  .gitignore  BUILD.bazel  WORKSPACE  exercise.sh
1-up-and-running/go/: server.go
1-up-and-running/groceries/: BUILD.bazel  server.go
2-java-tooling/: BUILD.bazel  WORKSPACE  exercise.sh
2-java-tooling/src/main/java/com/example/myproject/: Greeter.java
2-java-tooling/src/test/java/com/example/myproject/: TestHello.java
3-java-dependencies/: .bazelrc  .prettierrc  BUILD.bazel  WORKSPACE  exercise.sh  maven_install.json
3-java-dependencies/app-one/src/main/java/com/example/myproject/: BUILD.bazel  Greeter.java
3-java-dependencies/app-one/src/test/java/com/example/myproject/: BUILD.bazel  TestHello.java
4-multi-language/: .editorconfig  .gitignore  BUILD.bazel  WORKSPACE  exercise.sh
4-multi-language/apidef/: BUILD.bazel  api.proto
4-multi-language/app-one/src/main/java/com/example/myproject/: BUILD.bazel  Greeter.java
4-multi-language/app-one/src/test/java/com/example/myproject/: BUILD.bazel
4-multi-language/frontend/: BUILD.bazel  frontend.go
4-multi-language/rules/: BUILD.bazel  acme_corporate_standards.bzl
4-multi-language/service/src/main/java/com/oasisdigital/grocery/: BUILD.bazel  GroceryListServer.java
5-full-stack/: .bazelrc  BUILD.bazel  WORKSPACE  angular-metadata.tsconfig.json  maven_install.json  tsconfig.json
5-full-stack-suite/: .bazelrc  .gitignore  BUILD.bazel  WORKSPACE  db.json  exercise.sh  package.json
5-full-stack-suite/client/: .prettierignore  angular.json  karma.conf.js  tsconfig.app.json  tsconfig.spec.json
5-full-stack-suite/client/src/: BUILD.bazel  index-template.html  index.html  main.dev.ts  rollup.config.js  tsconfig.json
5-full-stack-suite/client/src/app/: BUILD.bazel  fx-data.service.ts
5-full-stack-suite/client/src/app/pair-history-view/: pair-history-view.component.html  pair-history-view.component.ts
5-full-stack-suite/client/src/app/pair-list/: pair-list.component.html
5-full-stack-suite/client/src/app/pair-list-view/: pair-list-view.component.ts
5-full-stack-suite/e2e/src/: app.e2e-spec.ts
5-full-stack-suite/fx-server/: BUILD.bazel
5-full-stack-suite/fx-server/src/: main.ts
5-full-stack-suite/fx-server/www/: index.html
5-full-stack-suite/time-server/: BUILD.bazel
5-full-stack-suite/time-server/src/main/java/com/oasisdigital/myproject/: Server.java
5-full-stack/client/: BUILD.bazel
5-full-stack/client/src/: style.css
5-full-stack/client/src/app/: app.component.html  app.module.ts  sse.service.ts
5-full-stack/client/src/app/pair-history/: pair-history.component.html  pair-history.component.ts
5-full-stack/client/src/app/pair-history-chart/: pair-history-chart.component.html  pair-history-chart.component.ts
5-full-stack/client/src/app/pair-list/: pair-list.component.ts
5-full-stack/client/src/app/pair-list-view/: pair-list-view.component.html
5-full-stack/fx-server/www/: index.html
5-full-stack/time-server/: BUILD.bazel
5-full-stack/time-server/src/main/java/com/oasisdigital/myproject/: Server.java
6-sprawling-suite/: WORKSPACE  exercise.sh
7-large-angular/: .bazelrc  README.md  WORKSPACE  exercise.sh
8-adding-language-support/: README.md  exercise.sh
tools/: build-all.sh  clean-all.sh  setup-on-debian-ubuntu.sh  setup.sh
