load("@rules_java//java:defs.bzl", "java_binary", "java_library", "java_test")

package(default_visibility = ["//visibility:public"])

alias(
    name = "jdk",
    actual = select(
        {
            "@bazel_tools//src/conditions:darwin": "@jdk8_macos//:jdk",
            "@bazel_tools//src/conditions:darwin_x86_64": "@jdk8_macos//:jdk",
            "@bazel_tools//src/conditions:linux_x86_64": "@jdk8_linux//:jdk",
        },
        no_match_error = "Could not find a JDK for host execution environment, please explicitly" +
                         " provide one using `--host_javabase.`",
    ),
    visibility = ["//visibility:public"],
)

java_binary(
    name = "hello-world",
    srcs = ["src/main/java/com/example/myproject/Greeter.java"],
    main_class = "com.example.myproject.Greeter",
)

java_binary(
    name = "hello-data",
    main_class = "com.example.myproject.Greeter",
    runtime_deps = [":hello-lib"],
)

java_library(
    name = "hello-lib",
    srcs = ["src/main/java/com/example/myproject/Greeter.java"],
    data = [":greeting"],
)

filegroup(
    name = "greeting",
    srcs = ["src/main/resources/greeting.txt"],
)

java_test(
    name = "pass",
    srcs = ["src/test/java/com/example/myproject/TestHello.java"],
    test_class = "com.example.myproject.TestHello",
    deps = [
        ":hello-lib",
        "@junit//jar",
    ],
)
