load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["server.go"],
    importpath = "github.com/example/project/groceries",
    visibility = ["//visibility:private"],
    deps = ["@com_github_mattn_go_slim//:go_default_library"],
)

go_binary(
    name = "groceries",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
