package(default_visibility = ["//visibility:public"])

load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_java//java:defs.bzl", "java_proto_library")
load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")

proto_library(
    name = "api_proto",
    srcs = ["api.proto"],
)

go_proto_library(
    name = "api_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "proto/grocery/api",
    proto = ":api_proto",
)

java_proto_library(
    name = "api_java_proto",
    deps = [":api_proto"],
)

java_grpc_library(
    name = "api_java_proto_lib",
    srcs = [":api_proto"],
    deps = [":api_java_proto"],
)
