load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["frontend.go"],
    importpath = "grocery/api",
    visibility = ["//visibility:private"],
    deps = [
        "//apidef:api_proto_go",
        "@com_github_golang_protobuf//jsonpb:go_default_library_gen",
        "@com_github_mattn_go_slim//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection:go_default_library",
    ],
)

go_binary(
    name = "groceries",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
