package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")
load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "app",
    srcs = glob(["src/**/*.ts"]),
    deps = [
        "@npm//@types/node",
        "@npm//express",
        "@npm//sse-channel",
        "@npm//tslib",
    ],
)

filegroup(
    name = "assets",
    srcs = glob(["www/**/*"]),
)

# bazel run //server
nodejs_binary(
    name = "server",
    data = [
        ":app",
        ":assets",
    ],
    entry_point = ":src/main.ts",
    visibility = ["//visibility:public"],
)

# For testing from the root workspace of this repository with bazel_integration_test.
filegroup(
    name = "all_files",
    srcs = glob(["**/*"]),
)
