package(default_visibility = ["//visibility:private"])

load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")
load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "app",
    srcs = glob(["src/**/*.ts"]),
    deps = [
        "@npm//@types/node",
        "@npm//express",
        "@npm//sse-channel",
        "@npm//tslib",
    ],
)

filegroup(
    name = "assets",
    srcs = glob(["www/**/*"]),
)

# bazel run //server
nodejs_binary(
    name = "fx-server",
    data = [
        ":app",
        ":assets",
    ],
    entry_point = ":src/main.ts",
    visibility = ["//visibility:public"],
)
