load("@rules_java//java:defs.bzl", "java_binary", "java_library")

package(default_visibility = ["//visibility:public"])

java_binary(
    name = "hello-world",
    srcs = ["Greeter.java"],
    main_class = "com.example.myproject.Greeter",
    deps = ["@bazel_tools//tools/java/runfiles"],
)

java_binary(
    name = "hello-data",
    main_class = "com.example.myproject.Greeter",
    runtime_deps = [":hello-lib"],
)

java_library(
    name = "hello-lib",
    srcs = ["Greeter.java"],
    data = ["//app-one/src/main/resources:greeting"],
    deps = ["@bazel_tools//tools/java/runfiles"],
)
