load("@rules_java//java:defs.bzl", "java_test")

java_test(
    name = "pass",
    srcs = ["TestHello.java"],
    test_class = "com.example.myproject.TestHello",
    deps = [
        "//app-one/src/main/java/com/example/myproject:hello-lib",
        "@maven//:junit_junit",
    ],
)

# java_test(
#     name = "fail",
#     srcs = ["Fail.java"],
#     main_class = "com.example.myproject.Fail",
# )
